--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
         <section class="conteiner__conteudo">
             <h1 class="conteiner__conteudo__titulo">Sobre mim</h1>
             <p class="conteiner__conteudo__paragrafo">Formação em <strong>Bacharelado em Sistemas de Informação</strong>, apaixonado por tecnologia e até onde ela pode me levar. Estou em busca de uma primeira oportunidade na área de desenvolvimento para mostrar meu potencial. Gosto de me desenvolver proativamente e com criatividade em implementações diversas.</p>
-            <p class="conteiner__conteudo__paragrafo">Tenho conhecimento intermediário em: <strong>HTML, CSS, JavaScript</strong> para cada vez mais ter uma base sólida e poder desenvolver projetos da melhor forma possível. Toda jornada tem um início.</p>
+            <p class="conteiner__conteudo__paragrafo">Tenho conhecimento intermediário em: <strong>HTML, CSS, JavaScript e React</strong> para cada vez mais ter uma base sólida e poder desenvolver projetos da melhor forma possível. Toda jornada tem um início.</p>
             <div class="conteiner__estudando">
                 <h2 class="conteiner__estudando__subtitulo">Principais conhecimentos:</h2>
                 <div class="conteiner__estudando__imagem">
                     <img class="conteiner__estudando__imagem__logo" src="assets/arquivo-html.png" alt="">
                     <img class="conteiner__estudando__imagem__logo" src="assets/arquivo-css.png" alt="">
                     <img class="conteiner__estudando__imagem__logo" src="assets/js.png" alt="">
+                    <img class="conteiner__estudando__imagem__logo" src="assets/react.png" alt="">
                 </div>
             </div>
         </section>  
