--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main class="conteiner">
     <section class="conteiner__conteudo">
         <h1 class="conteiner__conteudo__titulo" id="hey">Bem vindo</h1>
-        <p class="conteineer__conteudo__paragrafo">Me chamo Erick Kunhavalik <strong> e esse é o meu cartão de visita. </strong> Quer me acompanhar nesse jornada de Front-end?</p>
+        <p class="conteineer__conteudo__paragrafo">Me chamo Erick Kunhavalik esse é o meu cartão de visita. Quer me acompanhar nesse jornada de Front-end?</p>
 
         <div class="conteiner__links">
         <h2 class="conteiner__links__subtitulo">Acesse minhas redes:</h2>
